[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
detour = "0.8.0"
libc = "0.2"
djin = "0.1.1"
sysinfo = "0.20.1"

[dependencies.winapi]
version = "0.3.9"
features = [
    "everything",
    "impl-default",
    "impl-debug",
    "memoryapi",
    "psapi",
    "minwindef",
    "winnt",
    "winbase",
    "minwinbase",
    "consoleapi",
    "wincon",
    "libloaderapi",
    "tlhelp32",
    "handleapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "ntdef"
]
