[package]
name = "guard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
detour = "0.8.0"
libc = "0.2"
minhook-sys = "0.1.1"
lazy_static = "1.4.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "everything",
    "impl-default",
    "impl-debug",
    "memoryapi",
    "psapi",
    "minwindef",
    "winnt",
    "winbase",
    "minwinbase",
    "consoleapi",
    "wincon",
    "libloaderapi",
    "tlhelp32",
    "handleapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "ntdef"
]